# sketch-backend

./: .gitignore  .hgignore  .hgtags  .project  .pydevproject  AUTHORS  CMakeLists.txt  COPYING  Failing-End-to-End-Unit-Tests  LICENSE  Makefile.am  README  README_HyperSketch.md  TUTORIAL2.md  TimeoutFileEnumerator.py  autogen.sh  build  buildCegisStatic.sh  config.h.in~  configure.ac  main.cpp  my-build.sh
bindings/: CegisCApi.chs  HsCegis.hs  (+3 more)
src/MiniSat/: Global.h  Heap.h  MSolver.h  Main.C  Makefile.am  Solver.C  Solver.cpp  SolverTypes.h  depend.mak
src/MiniSat/core/: IntPropagator.cpp  IntPropagator.h  MSolver.h  Solver.cpp  SolverTypes.h  SynthInSolver.h
src/MiniSat/mtl/: Alg.h  BasicHeap.h  BoxedVec.h  Heap.h  Map.h  Queue.h  Sort.h  Vec.h
src/SketchSolver/: ABCSATSolver.cpp  ABCSATSolver.h  ArithmeticExpressionBuilder.cpp  ArithmeticExpressionBuilder.h  ArithmeticExpressionSolver.h  BasicError.h  BooleanToCNF.cpp  BooleanToCNF.h  CustomSolvers.h  DES_IP.opt  EntityResolutionSolver.h  FindCheckSolver.cpp  FindCheckSolver.h  GTPredicateSolver.h  GradientDescent.cpp  GradientDescent.h  InputParser.cpp  InputParser.hpp  InputParser.output  Makefile.am  MiniSATSolver.cpp  MiniSATSolver.h  NumericalSolver.h  SATSolver.cpp  SATSolver.h  SimulatedAnnealing.h  SwapperPredicateBuilder.h  SwapperPredicateSolver.h  ZchaffSATSolver.cpp  ZchaffSATSolver.h  compile.sh  des_IP.cpp  driver.cpp  dropThird.cpp  dropThirdBUGGY.cpp  dropThirdComplete.cpp  dropThirdWloop.cpp  dropThirs.opt  logBase2.cpp  memory_sampler.cc  (+9 more)
src/SketchSolver/InputParser/: AutoDiff.cpp  AutoDiff.h  BackwardsAnalysis.cpp  BackwardsAnalysis.h  BasicError.h  BenchmarkScore.cpp  BenchmarkScore.h  BitSet.h  BooleanDAG.cpp  BooleanDAG.h  BooleanDAGCreator.cpp  BooleanDAGCreator.h  BooleanDagLightUtility.cpp  BooleanDagLightUtility.h  BooleanDagUtility.cpp  BooleanDagUtility.h  BooleanNodes.cpp  BooleanNodes.h  CEGISChecker.cpp  CEGISChecker.h  CEGISFinder.cpp  CEGISFinder.h  CEGISFinderBatchEnumeration.cpp  CEGISFinderBatchEnumeration.h  CEGISParams.h  CEGISSolver.cpp  CEGISSolver.h  CallGraphAnalysis.cpp  CallGraphAnalysis.h  CegisCApi.cpp  CegisCApi.h  CegisMain.cpp  CegisMainHelpers.cpp  CegisMainHelpers.h  Checkpointer.cpp  Checkpointer.h  CommandLineArgs.cpp  CommandLineArgs.h  ComplexInliner.cpp  ComplexInliner.h  (+138 more)
src/SketchSolver/InputParser/solver_language__test_files/: Extensive_forward_looking__blank_binary_function__inline_1.75.sk  best_effort_synthesis__increase_num_traials_and_num_rows.hsk  binary_boolean_predicates_dsl.sk  blank_binary_function__inline_1.25_and_or_or.sk  blank_binary_function__inline_1.5.sk  blank_binary_function__inline_1.75.sk  blank_binary_function__inline_1.sk  blank_binary_function__inline_1__arr_size_3.sk  blank_binary_function__inline_2.sk  blank_binary_function__inline_2__arr_size_3.sk  blank_binary_function__inline_2__maximize_counterexamples.sk  blank_binary_function__inline_3.sk  blank_binary_function__inline_3__arr_size_3.sk  blank_binary_function__inline_4.sk  boolean_synthesis_2_2.sk  boolean_synthesis_2_2__compound.sk  boolean_synthesis_2_2__recursive.sk  boolean_synthesis_2_2__template.sk  diagonal.data  enum_all_boolean_binary_funcs.hsk  enum_all_boolean_binary_funcs__enum_all_partial_functions_and_generate_dataset.hsk  enum_all_boolean_ternary_4_bit_partial_funcs_masks.hsk  enum_all_boolean_ternary_funcs.hsk  fossils_from_multi_level_top_and_bottom_synthesis_and_re_synthesis  hypersketch_depth_1.hsk  hypersketch_hello_world.hsk  inputs.txt  inputs_2.txt  inputs_3.txt  inputs__9bits__bbf_inline_1.txt  inputs__meta_synth_task_bbf_inline_1_arr_size_3.txt  inputs__meta_synthesis_taks__9_bits__2in_4k_3n.txt  karel_for_text_sketch.sk  karel_for_text_sketch__modularized.sk  karel_for_text_sketch__staged_concretization.sk  karel_for_text_sketch__with_repeat_broken.sk  karel_for_text_sketch_as_a_meta_task.sk  larger_space_of_compound_predicates_2_2.sk  meta_langauge_space__exaustive_enumeration_of.sk  meta_langauge_space__tempbin__depth_1.5.sk  (+42 more)
src/SketchSolver/InputParser/trading_bot/: fit_line.sk  increase_timeout.hsk  timeseries.data
src/SketchSolver/NumericalSynthesis/: AutoDiff.cpp  AutoDiff.h  BasicNumericalHelper.cpp  BasicNumericalHelper.h  BoolApproxHelper.cpp  BoolApproxHelper.h  DistanceGrad.cpp  DistanceGrad.h  GlobalEvaluator.cpp  GlobalEvaluator.h  GradUtil.cpp  GradUtil.h  GradientDescent.cpp  GradientDescent.h  InequalityHelper.cpp  InequalityHelper.h  Interval.cpp  Interval.h  IntervalGrad.cpp  IntervalGrad.h  IntervalPropagator.h  IteApproxNumericalHelper.cpp  IteApproxNumericalHelper.h  NumericalSolver.cpp  NumericalSolver.h  NumericalSolverHelper.h  NumericalSynthesizer.cpp  NumericalSynthesizer.h  RangeDiff.cpp  RangeDiff.h  SimpleEvaluator.cpp  SimpleEvaluator.h  SmoothSatHelper.cpp  SmoothSatHelper.h  Util.h  ValueGrad.cpp  ValueGrad.h
src/SketchSolver/NumericalSynthesis/BoolAbstraction/: BoolAbstractor.cpp  BoolAbstractor.h  BoolNodeSimplifier.cpp  BoolNodeSimplifier.h  Interface.h  Predicate.cpp  Predicate.h
src/SketchSolver/NumericalSynthesis/ConflictGenerators/: AbstractConflictGenerator.h  ConflictGenerator.h  SimpleConflictGenerator.h  SmartConflictGenerator.h  conflictGenerator.h
src/SketchSolver/NumericalSynthesis/DataStructures/: DistanceGrad.cpp  DistanceGrad.h  Interval.cpp  IntervalGrad.cpp  IntervalGrad.h  ValueGrad.cpp  ValueGrad.h
src/SketchSolver/NumericalSynthesis/IntervalProp/: IntervalPropagator.h
src/SketchSolver/SolverInterfaces/: ABCSATSolver.cpp  ABCSATSolver.h  BLIFwriter.cpp  BLIFwriter.h  DeductiveSolver.h  DeductiveSolverHelpers.h  MiniSATSolver.cpp  MiniSATSolver.h  SATSolver.cpp  SATSolver.h  ZchaffSATSolver.cpp  ZchaffSATSolver.h  solvers.mk
src/SketchSolver/testcases/: log2.sk.tmp  logCountingSketch.sk.tmp  testArr1.str
src/zchaff/: Makefile.am  README  SAT.h  cnf_stats.cpp  driver.cpp  driver2.cpp  sat_solver.cpp  tmp  ttmp  zchaff_base.h  zchaff_c_wrapper.cpp  zchaff_cpp_wrapper.cpp  zchaff_dbase.cpp  zchaff_solver.cpp  zchaff_solver.h  zchaff_utils.cpp  zchaff_wrapper.wrp  zminimal.cpp  zverify_df.cpp
(+1044 files in other folders)
