cmake_minimum_required(VERSION 3.23)
project(sketch)

set(CMAKE_CXX_STANDARD 17)

add_definitions(-D_NOGSL -D_NOSNOPT)

include_directories(
        src
        src/MiniSat
        src/MiniSat/mtl
        src/MiniSat/core
        src/SketchSolver
        src/SketchSolver/InputParser
        src/SketchSolver/SolverInterfaces
        src/SketchSolver/NumericalSynthesis
        src/SketchSolver/NumericalSynthesis/ReasCore
        src/SketchSolver/NumericalSynthesis/BoolAbstraction
        src/SketchSolver/NumericalSynthesis/DataStructures
        src/SketchSolver/NumericalSynthesis/Utils
        src/SketchSolver/NumericalSynthesis/Optimizers
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators
        src/SketchSolver/NumericalSynthesis/SymbolicAnalyzers
        src/SketchSolver/NumericalSynthesis/ConflictGenerators
        src/SketchSolver/NumericalSynthesis/Solvers
        src/SketchSolver/NumericalSynthesis/SuggestionGenerators
        src/SketchSolver/NumericalSynthesis/Samplers
)

add_executable(sketch main.cpp

        src/SketchSolver/BasicError.h
        src/SketchSolver/SolverInterfaces/SATSolver.h
        src/SketchSolver/SolverInterfaces/SATSolver.cpp
        src/SketchSolver/SolverInterfaces/MiniSATSolver.h
        src/SketchSolver/SolverInterfaces/MiniSATSolver.cpp

        src/MiniSat/core/MSolver.h
        src/MiniSat/core/SolverTypes.h
        src/MiniSat/core/Solver.cpp
        src/MiniSat/core/SynthInSolver.h
        src/MiniSat/core/IntPropagator.cpp
        src/MiniSat/core/IntPropagator.h
        src/MiniSat/mtl/Alg.h
        src/MiniSat/mtl/BoxedVec.h
        src/MiniSat/mtl/Map.h
        src/MiniSat/mtl/Sort.h
        src/MiniSat/mtl/BasicHeap.h
        src/MiniSat/mtl/Heap.h
        src/MiniSat/mtl/Queue.h
        src/MiniSat/mtl/Vec.h

        src/SketchSolver/BasicError.h
        src/SketchSolver/BooleanToCNF.h
        src/SketchSolver/FindCheckSolver.h
        src/SketchSolver/memory_statistics.h
        src/SketchSolver/memory_sampler.h
        src/SketchSolver/timerclass.h
        src/SketchSolver/EntityResolutionSolver.h
        src/SketchSolver/GTPredicateSolver.h				
        src/SketchSolver/NumericalSynthesis/ReasCore/REASSolver.h       
        src/SketchSolver/NumericalSynthesis/ReasCore/NumDebugger.h 		
        src/SketchSolver/NumericalSynthesis/BoolAbstraction/BoolAbstractor.h
        src/SketchSolver/ArithmeticExpressionBuilder.h
        src/SketchSolver/ArithmeticExpressionSolver.h     				
        src/SketchSolver/NumericalSynthesis/BoolAbstraction/BoolNodeSimplifier.h 
        src/SketchSolver/NumericalSynthesis/BoolAbstraction/Predicate.h 	
        src/SketchSolver/NumericalSynthesis/BoolAbstraction/Interface.h  
        src/SketchSolver/NumericalSynthesis/ReasCore/NumericalSynthesizer.h     
        src/SketchSolver/NumericalSynthesis/Solvers/NumericalSolver.h	
        src/SketchSolver/NumericalSynthesis/Utils/GradUtil.h		
        src/SketchSolver/NumericalSynthesis/Utils/Util.h	
        src/SketchSolver/NumericalSynthesis/Optimizers/OptSolver.h 		
        src/SketchSolver/NumericalSynthesis/Optimizers/Snopt.h			
        src/SketchSolver/NumericalSynthesis/Optimizers/GradientDescent.h    
        src/SketchSolver/NumericalSynthesis/Optimizers/OptimizationWrapper.h	
        src/SketchSolver/NumericalSynthesis/Optimizers/MaxOptimizationWrapper.h 
        src/SketchSolver/NumericalSynthesis/Optimizers/SnoptWrapper.h	
        src/SketchSolver/NumericalSynthesis/Optimizers/GradientDescentWrapper.h 
        src/SketchSolver/NumericalSynthesis/Optimizers/MaxSolver.h		
        src/SketchSolver/NumericalSynthesis/Optimizers/MaxSolverWrapper.h 
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators/SymbolicEvaluator.h		
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators/BoolAutoDiff.h	
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators/KLocalityAutoDiff.h 
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators/SimpleEvaluator.h	
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators/SimpleGradEvaluator.h 
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators/ActualEvaluators.h 
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators/SmoothEvaluators.h 
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators/SmoothAutoDiff.h 
        src/SketchSolver/NumericalSynthesis/DataStructures/DistanceGrad.h		
        src/SketchSolver/NumericalSynthesis/DataStructures/ValueGrad.h 
        src/SketchSolver/NumericalSynthesis/DataStructures/Interval.h		
        src/SketchSolver/NumericalSynthesis/DataStructures/IntervalGrad.h		
        src/SketchSolver/NumericalSynthesis/IntervalProp/IntervalPropagator.h	
        src/SketchSolver/NumericalSynthesis/ConflictGenerators/ConflictGenerator.h	
        src/SketchSolver/NumericalSynthesis/ConflictGenerators/SimpleConflictGenerator.h	
        src/SketchSolver/NumericalSynthesis/SuggestionGenerators/SuggestionGenerator.h	
        src/SketchSolver/NumericalSynthesis/SuggestionGenerators/SimpleSuggestionGenerator.h	
        src/SketchSolver/NumericalSynthesis/SuggestionGenerators/SmartSuggestionGenerator1.h 
        src/SketchSolver/NumericalSynthesis/SuggestionGenerators/SuggestionGeneratorUsingMax.h 
        src/SketchSolver/NumericalSynthesis/Samplers/Sampler.h 	
        src/SketchSolver/NumericalSynthesis/Samplers/BasicSampler.h 
        src/SketchSolver/NumericalSynthesis/Samplers/BoolBasedSampler.h 
        src/SketchSolver/InputParser/BackwardsAnalysis.h			
        src/SketchSolver/InputParser/BooleanDAG.h			
        src/SketchSolver/InputParser/BooleanDAGCreator.h			
        src/SketchSolver/InputParser/BooleanNodes.h			
        src/SketchSolver/InputParser/CegisCApi.h					
        src/SketchSolver/InputParser/CEGISSolver.h 
        src/SketchSolver/InputParser/CallGraphAnalysis.h 
        src/SketchSolver/InputParser/Checkpointer.h 
        src/SketchSolver/InputParser/CommandLineArgs.h			
        src/SketchSolver/InputParser/ComplexInliner.h 
        src/SketchSolver/InputParser/DagCSE.h				
        src/SketchSolver/InputParser/DagElimUFUN.h			
        src/SketchSolver/InputParser/DagFunctionInliner.h		
        src/SketchSolver/InputParser/DagFunctionToAssertion.h		
        src/SketchSolver/InputParser/DagOptim.h				
        src/SketchSolver/InputParser/DagOptimizeCommutAssoc.h		
        src/SketchSolver/InputParser/ExtractEvaluationCondition.h	
        src/SketchSolver/InputParser/FastSet.h				
        src/SketchSolver/InputParser/InputReader.h			
        src/SketchSolver/InputParser/InterpreterEnvironment.h 
        src/SketchSolver/InputParser/CegisMainHelpers.h 
        src/SketchSolver/InputParser/NodeEvaluator.h 
        src/SketchSolver/InputParser/NodeSlicer.h 
        src/SketchSolver/InputParser/NodeStore.h				
        src/SketchSolver/InputParser/NodeVisitor.h			
        src/SketchSolver/InputParser/NodesToEuclid.h			
        src/SketchSolver/InputParser/NodesToSolver.h			
        src/SketchSolver/InputParser/SolveFromInput.h			
        src/SketchSolver/InputParser/Tvalue.h				
        src/SketchSolver/InputParser/VarStore.h	
        src/SketchSolver/InputParser/driver.h				
        src/SketchSolver/InputParser/NodeHardcoder.h			
        src/SketchSolver/InputParser/HoleHardcoder.h			
        src/SketchSolver/InputParser/guardedVal.h			
        src/SketchSolver/InputParser/FloatSupport.h 			
        src/SketchSolver/InputParser/IntToFloatRewriteDag.h 
        src/SketchSolver/InputParser/CEGISChecker.h 
        src/SketchSolver/InputParser/CEGISFinder.h 
        src/SketchSolver/InputParser/CounterexampleFinder.h 
        src/SketchSolver/InputParser/solver_language_yacc.h 
        src/SketchSolver/InputParser/SolverLanguageLexAndYaccHeader.h 
        src/SketchSolver/InputParser/SolverLanguageYaccHeader.h 
        src/SketchSolver/InputParser/SketchFunction.h 
        src/SketchSolver/InputParser/ProgramEnvironment.h 
        src/SketchSolver/InputParser/File.h 
        src/SketchSolver/InputParser/GenericFile.h 
        src/SketchSolver/InputParser/BooleanDagLightUtility.h 
        src/SketchSolver/InputParser/BooleanDagUtility.h 
        src/SketchSolver/InputParser/FunctionMapTransformerLanguage.h 
        src/SketchSolver/InputParser/FunctionMap.h 
        src/SketchSolver/InputParser/FunctionMapTransformerLanguage.h 
        src/SketchSolver/InputParser/FunctionMapTransformerDag.h 
        src/SketchSolver/InputParser/function_map_transformer_language_yacc.h 
        src/SketchSolver/InputParser/SolverLanguage.h 
        src/SketchSolver/InputParser/SolverLanguagePrimitives.h

        src/SketchSolver/BooleanToCNF.cpp
        src/SketchSolver/FindCheckSolver.cpp
        src/SketchSolver/memory_sampler.cc
        src/SketchSolver/ArithmeticExpressionBuilder.cpp
        src/SketchSolver/NumericalSynthesis/ReasCore/REASSolver.cpp  
        src/SketchSolver/NumericalSynthesis/BoolAbstraction/BoolAbstractor.cpp 
        src/SketchSolver/NumericalSynthesis/BoolAbstraction/BoolNodeSimplifier.cpp 
        src/SketchSolver/NumericalSynthesis/BoolAbstraction/Predicate.cpp 	
        src/SketchSolver/NumericalSynthesis/ReasCore/NumericalSynthesizer.cpp 
        src/SketchSolver/NumericalSynthesis/Solvers/NumericalSolver.cpp  
        src/SketchSolver/NumericalSynthesis/Utils/GradUtil.cpp	
        src/SketchSolver/NumericalSynthesis/Optimizers/Snopt.cpp	
        src/SketchSolver/NumericalSynthesis/Optimizers/GradientDescent.cpp       
        src/SketchSolver/NumericalSynthesis/Optimizers/MaxSolver.cpp 			
        src/SketchSolver/NumericalSynthesis/DataStructures/DistanceGrad.cpp		
        src/SketchSolver/NumericalSynthesis/DataStructures/ValueGrad.cpp	
        src/SketchSolver/NumericalSynthesis/DataStructures/Interval.cpp 
        src/SketchSolver/NumericalSynthesis/DataStructures/IntervalGrad.cpp 
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators/BoolAutoDiff.cpp	
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators/SmoothAutoDiff.cpp 
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators/KLocalityAutoDiff.cpp 
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators/SimpleEvaluator.cpp	
        src/SketchSolver/NumericalSynthesis/SymbolicEvaluators/SimpleGradEvaluator.cpp 
        src/SketchSolver/InputParser/BackwardsAnalysis.cpp	
        src/SketchSolver/InputParser/BooleanDAG.cpp		
        src/SketchSolver/InputParser/BooleanDAGCreator.cpp	
        src/SketchSolver/InputParser/BooleanNodes.cpp		
        src/SketchSolver/InputParser/CegisCApi.cpp			
        src/SketchSolver/InputParser/CegisMainHelpers.cpp			
        src/SketchSolver/InputParser/CEGISSolver.cpp	
        src/SketchSolver/InputParser/CallGraphAnalysis.cpp 
        src/SketchSolver/InputParser/Checkpointer.cpp 
        src/SketchSolver/InputParser/ComplexInliner.cpp 
        src/SketchSolver/InputParser/CommandLineArgs.cpp 
        src/SketchSolver/InputParser/DagCSE.cpp			
        src/SketchSolver/InputParser/DagElimUFUN.cpp		
        src/SketchSolver/InputParser/DagFunctionInliner.cpp	
        src/SketchSolver/InputParser/DagFunctionToAssertion.cpp	
        src/SketchSolver/InputParser/DagOptim.cpp		
        src/SketchSolver/InputParser/DagOptimizeCommutAssoc.cpp	
        src/SketchSolver/InputParser/driver.cpp			
        src/SketchSolver/InputParser/HoleHardcoder.cpp             
        src/SketchSolver/InputParser/InputReader.cpp		
        src/SketchSolver/InputParser/InterpreterEnvironment.cpp 
        src/SketchSolver/InputParser/NodeEvaluator.cpp 
        src/SketchSolver/InputParser/NodeStore.cpp		
        src/SketchSolver/InputParser/NodeSlicer.cpp 
        src/SketchSolver/InputParser/NodesToSolver.cpp		
        src/SketchSolver/InputParser/NodesToEuclid.cpp		
        src/SketchSolver/InputParser/NodeVisitor.cpp		
        src/SketchSolver/InputParser/SolveFromInput.cpp 
        src/SketchSolver/InputParser/NodeHardcoder.cpp  
        src/SketchSolver/InputParser/Tvalue.cpp 
        src/SketchSolver/InputParser/CEGISChecker.cpp 
        src/SketchSolver/InputParser/CEGISFinder.cpp 
        src/SketchSolver/InputParser/CounterexampleFinder.cpp 
        src/SketchSolver/InputParser/solver_language_yacc.cpp 
        src/SketchSolver/InputParser/SketchFunction.cpp 
        src/SketchSolver/InputParser/ProgramEnvironment.cpp 
        src/SketchSolver/InputParser/File.cpp 
        src/SketchSolver/InputParser/GenericFile.cpp 
        src/SketchSolver/InputParser/VarStore.cpp 
        src/SketchSolver/InputParser/SolverLanguageLexAndYaccHeader.cpp 
        src/SketchSolver/InputParser/SolverLanguageYaccHeader.cpp 
        src/SketchSolver/InputParser/BooleanDagLightUtility.cpp 
        src/SketchSolver/InputParser/BooleanDagUtility.cpp 
        src/SketchSolver/InputParser/FunctionMapTransformerLanguage.cpp 
        src/SketchSolver/InputParser/solver_language_lex.cpp 
        src/SketchSolver/InputParser/FunctionMap.cpp 
        src/SketchSolver/InputParser/FunctionMapTransformerLanguage.cpp 
        src/SketchSolver/InputParser/FunctionMapTransformerDag.cpp 
        src/SketchSolver/InputParser/function_map_transformer_language_yacc.cpp 
        src/SketchSolver/InputParser/SolverLanguage.cpp 
        src/SketchSolver/InputParser/SolverLanguagePrimitives.cpp
        src/SketchSolver/InputParser/objP.cpp src/SketchSolver/InputParser/objP.h)
